--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@trpc/next": "^10.44.1",
     "@trpc/react-query": "^10.44.1",
     "@trpc/server": "^10.44.1",
+    "mui-one-time-password-input": "^2.0.1",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18",
