--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
+    "react-icons": "^4.12.0",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
