--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mui-one-time-password-input": "^2.0.1",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
+    "node-cron": "^3.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/node-cron": "^3.0.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.16",
